#Version 0.7.8# 

*  autoload.php > added 'Controller' suffix support for controllers files and 
   fixed Peak_Application run() method and Peak_Controller initController() method accordly
   Controller files and classes names look likes 'foobarController.php'

*  Added Peak_Dispatcher

*  Peak_View > fix problem with __call(). Methods 'return' value/boolean was missing

*  Peak_Render > added compression to caching

*  Peak_Render > added methods : isCachedBlock(), getCacheBlock(), cacheBlockEnd().
   Those new functions help to cache a block of text/code inside views

#Version 0.7.7#

*  Peak_Render > added methods : genCacheId() and getCacheIdFile().
   enableCache() and disableCache() can be used inside controller and bootstrap.
   isCached() can be used inside controller.

*  Peak_Render > Added scripts views outputing cache.
                 added methods    : enableCache(), disableCache(), preOutput(), isCached()
                 added properties : $_use_cache, $_cache_expire, $_cache_path, $_cache_id

   - Render engines must use preOutput() in their render() method instead of output() directly 
     if they wants to support outputing cache. 
   - method output() must be protected

*  Peak_Registry > added static method isInstanceOf()

*  Peak_Lang > added method load()

*  Peak_Lang > method translate() > added translation string replacements and callback function

*  Peek_Application > fixed run(), constants ENABLE_PEAK_CONTROLLER were not properly checked. Also
   constant ENABLE_PEAK_CONTROLLER becomes ENABLE_PEAK_CONTROLLERS (now with a 'S' at the end)

*  Peak_Lang > remove property $varname and we now use return array('key' => 'translation'); in translation files 

*  CONSTANTS names change: SYSTEM_*** become LIBRARY_***, W_LANG -> APP_LANG, W_THEME -> APP_THEME, 
   W_DEFAULT_CTRL -> APP_DEFAULT_CTLR, W_LOGIN -> APP_LOGIN_NAME, W_PASS -> APP_LOGIN_PASS

*  Peak_Registry > added method get()

*  Added Peak_View_Render_Virtual
